--- a/styles/style.css
+++ b/styles/style.css
@@ -10,17 +10,21 @@ body{
 
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container{
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
-.hr{
+hr{
     border: 1px solid #D1D1D1;
+   margin-bottom: 27px;
 }
 
 /* top players style */
@@ -56,6 +60,12 @@ main{
 
 /* top blogs styles */
 
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 25px;
+}
+
 .blog .thumbnail img{
     width: 177px;
     height: 117px;
@@ -82,4 +92,70 @@ main{
     color: #562EFF;
     font-size: 16px;
 
+}
+
+/* courses style */
+
+.courses .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-duration{
+    background-color: #FFE4E8;
+    color:  #FF4A60;
+    padding: 5px;
+    border-radius: 15px;
+    
+}
+
+/* media query */
+
+/* mobile devices */
+@media only screen and (max-width:688px){
+    .container{
+        width: 100%;
+    }
+    .players,.blogs,.courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player,.blog{
+        flex-direction: column;
+    }
+
+}
+
+/* tablet devices */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players,.courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .player,.blog{
+        flex-direction: column;
+    }
 }
