--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color:#F3F1FF ;
+    margin:0;
     
 }
 
@@ -26,6 +27,63 @@ hr{
     border: 1px solid #D1D1D1;
    margin-bottom: 27px;
 }
+
+/* header section */
+.nav-bar{
+    height: 94px;
+    background-color: #562EFF;
+    display: flex;
+    justify-content: space-between;
+    color:#FFFFFF;
+    
+    
+}
+
+.name-icon{
+    padding-left: 285px;
+    padding-top: 26px;
+    display: flex;
+}
+
+.name-icon img{
+    height: 51px;
+    width: 51px;
+}
+
+.name{
+    padding-top: 7px;
+    padding-left: 15.5px;
+    font-size: 24px;
+}
+
+.profile-nav{
+    padding-right: 290px;
+    padding-top: 26px;
+    display: flex;
+    
+    
+
+}
+
+.profile-nav img{
+    height: 51px;
+    width: 51px;
+}
+
+nav ul{
+    display: flex;
+}
+
+nav ul li {
+    list-style: none;
+    padding-right: 35px;
+}
+nav ul li a {
+    text-decoration: none;
+    color:#FFFFFF;
+    font-size: 16px;
+}
+
 
 /* top players style */
 /* section-title */
